# Python

./: .gitignore  README.md  pyproject.toml
Python/: pyproject.toml
Python/src/: main.py
Python/src/agents/temprature/: temperature.py
Python/src/messages/: __init__.py  message.py  temperature.py
src/: main.py
src/agents/: config.py  temperature.py  user.py
src/messages/: alert_msg.py  request.py  userpreference_msg.py
