[tool.poetry]
name = "temperature-alert-agent"
version = "0.6.2"
description = "A temperature alert agent using uAgents libarary."
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
uagents = "^0.6.2"

[other dependencies]
requests = "2.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
